--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -32,6 +32,70 @@ android:background="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/linearLayout5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="9dp"
+
+                    android:layout_marginEnd="15dp"
+                    android:background="@drawable/gradientcolor2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/img"
+                    tools:ignore="MissingClass">
+
+
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/linearLayout8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <Button
+                            android:id="@+id/volver"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginEnd="15dp"
+                            android:layout_weight="0.3"
+
+                            android:backgroundTint="@color/teal_700"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+
+                            android:text="Volver"
+                            android:textColor="#F6F9FA" />
+
+                        <Button
+                            android:id="@+id/guardarFav"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginEnd="15dp"
+                            android:layout_marginBottom="26dp"
+                            android:layout_weight="0.3"
+                            android:backgroundTint="@color/teal_700"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+
+                            android:text="@string/favorito2"
+                            android:textColor="#EFF4F4" />
+
+
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <FrameLayout
                     android:id="@+id/constraintLayout"
                     android:layout_width="match_parent"
@@ -42,54 +106,53 @@ android:background="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cardImg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contextClickable="true"
+                        <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/cardImg"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:contextClickable="true"
 
-        android:orientation="vertical"
-        app:cardBackgroundColor="@color/black"
-        app:cardCornerRadius="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints">
+                            android:orientation="vertical"
+                            app:cardBackgroundColor="@color/black"
+                            app:cardCornerRadius="15dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="1.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            tools:ignore="MissingConstraints">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/titleEd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
+                                <TextView
+                                    android:id="@+id/titleEd"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="0dp"
 
-                android:gravity="center"
-                android:lineSpacingExtra="12sp"
-                android:text="titleEd"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="#F8F8F5"
-                android:textSize="24sp"
+                                    android:gravity="center"
+                                    android:lineSpacingExtra="12sp"
+                                    android:text="titleEd"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="true"
+                                    android:textColor="#F8F8F5"
+                                    android:textSize="24sp"
 
-                android:textStyle="bold" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                                    android:textStyle="bold" />
 
 
-    </com.google.android.material.card.MaterialCardView>
+                            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+                        </com.google.android.material.card.MaterialCardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </FrameLayout>
 
@@ -161,10 +224,12 @@ android:background="@color/black"
                     </com.google.android.material.card.MaterialCardView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/img"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
                     <ImageView
@@ -192,76 +257,106 @@ android:background="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/linearLayout5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:background="@drawable/gradientcolor2"
-
-                    android:layout_marginTop="10dp"
-
-                    android:layout_marginEnd="15dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/img"
-                    tools:ignore="MissingClass">
-
-
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:id="@+id/linearLayout8"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal"
+                        android:layout_marginTop="43dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                        app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
-                        <Button
-                            android:id="@+id/volver"
+                        <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/cardContact"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="15dp"
-                            android:layout_marginTop="15dp"
-                            android:layout_marginEnd="15dp"
-                            android:layout_weight="0.3"
+                            android:contextClickable="true"
 
-                            android:backgroundTint="@color/teal_700"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
+                            android:orientation="vertical"
+                            app:cardBackgroundColor="@color/black"
+                            app:cardCornerRadius="15dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="1.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            tools:ignore="MissingConstraints">
 
-                            android:text="Volver"
-                            android:textColor="#F6F9FA" />
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
 
-                        <Button
-                            android:id="@+id/guardarFav"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="15dp"
-                            android:layout_marginTop="15dp"
-                            android:layout_marginEnd="15dp"
-                            android:layout_marginBottom="26dp"
-                            android:layout_weight="0.3"
-                            android:backgroundTint="@color/teal_700"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
+                                <TextView
+                                    android:id="@+id/firstName"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
 
-                            android:text="@string/favorito2"
-                            android:textColor="#EFF4F4" />
+                                    android:layout_marginTop="4dp"
+                                    android:gravity="center"
+                                    android:lineSpacingExtra="12sp"
+                                    android:text="firsName"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="true"
+                                    android:textColor="#F8F8F5"
+                                    android:textSize="24sp"
+                                    android:textStyle="bold"
+                                    app:layout_constraintBottom_toTopOf="@+id/lastName"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    tools:layout_editor_absoluteX="2dp" />
+
+                                <TextView
+
+                                    android:id="@+id/lastName"
+                                    android:layout_width="match_parent"
 
 
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+                                    android:layout_height="wrap_content"
+
+                                    android:layout_marginTop="4dp"
+                                    android:gravity="center"
+                                    android:lineSpacingExtra="12sp"
+                                    android:text="lastName"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="true"
+                                    android:textColor="#F8F8F5"
+                                    android:textSize="24sp"
+                                    android:textStyle="bold"
+                                    app:layout_constraintTop_toBottomOf="@+id/firstName"
+                                    tools:layout_editor_absoluteX="2dp" />
+
+                                <TextView
+
+                                    android:id="@+id/gender"
+                                    android:layout_width="match_parent"
 
 
+                                    android:layout_height="wrap_content"
+
+                                    android:layout_marginTop="4dp"
+                                    android:gravity="center"
+                                    android:lineSpacingExtra="12sp"
+                                    android:text="genre"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="true"
+                                    android:textColor="#F8F8F5"
+                                    android:textSize="24sp"
+                                    android:textStyle="bold"
+                                    app:layout_constraintTop_toBottomOf="@+id/lastName" />
+
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                        </com.google.android.material.card.MaterialCardView>
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </FrameLayout>
+
 
     </ScrollView>
 
